--- a/popup/popup.html
+++ b/popup/popup.html
@@ -2,15 +2,21 @@
 <html>
 <head>
   <link rel="stylesheet" href="popup.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
   <div class="container">
     <h1>YouDefineTube</h1>
-    <div id="controls">
-      <!-- Dynamically generated controls -->
+    <div>
+      <input type="text" id="topicInput" placeholder="Enter topic">
+      <button id="addTopic">Add Topic</button>
+      <div id="topicList"></div>
     </div>
-    <button id="settings">Advanced Settings</button>
+    <div id="controls">
+      <!-- Dynamically generated topics will appear here -->
+    </div>
   </div>
   <script src="popup.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
